<resources>
    <string name="app_name">Google play 电影</string>
    <string name="delete_contacts">删除联系人罗书发</string>
    <string name="selected_num">删除 %d 联系人</string>
    <string name="my_menu">我的菜单</string>
    <string name="dynamic_broadcast">动态广播</string>
    <string name="send_dynamic">发送动态广播</string>
    <string name="test">test</string>
    <string name="close_menu">关闭菜单</string>
    <string name="context_menu_add">添加</string>
    <string name="context_menu_remove">删除</string>
    <string name="context_menu_update">更新</string>
    <string name="get_px">获取屏幕分辨率</string>
    <string name="features">需求</string>
    <string name="fragment_life_cycle">Fragment生命周期</string>
    <string name="left_fragment">左边的fragment</string>
    <string name="replace_layout">我被替换啦</string>
    <string name="one_fragment_life_cycle">Fragment生命周期2</string>
    <string name="center_fragment">中间的布局</string>
    <string name="right_fragment">右边的fragment</string>
    <string name="news_app">新闻客户端</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="database_crud">数据库增删改查</string>
    <string name="create_database">创建数据库</string>
    <string name="database_add">添加数据</string>
    <string name="database_update">更新数据</string>
    <string name="database_delete">删除数据</string>
    <string name="database_delete_all">删除所有数据</string>
    <string name="database_query">查询数据</string>
    <string name="need_update_price_book_name">需要更新价格的书名</string>
    <string name="need_to_delete_book_where_pages_is_not_requirements">删除大于多少页的书</string>
    <string name="transaction_replace">开启事务替换数据</string>
    <string name="content_resolver_phone">内容解决者查询电话簿</string>
    <string name="get_contact">获取联系人</string>
    <string name="notification">通知</string>
    <string name="send_notification">发送通知</string>
    <string name="scroll_text_view">上下滾動的textview</string>
    <string name="text_view_scroll">各個方向滾動的textview</string>
    <string name="text_view_scroll_content">Hello World!哈哈哈哈哈哈嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿\nHello World!哈哈哈哈哈哈嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿\nHello World!哈哈哈哈哈哈嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿嘿</string>
    <string name="popu_window">popuWindow</string>
    <string name="java">java基礎</string>
    <string name="my_short">my_short</string>
    <string name="my_long">my_long</string>
    <string name="my_disable">my_disable</string>
</resources>
