<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/dynamic_broadcast"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_broadcast"/>
    <Button
        android:id="@+id/fragment_life_cycle"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_life_cycle"/>
    <Button
        android:id="@+id/one_fragment_life_cycle"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_fragment_life_cycle"/>
    <Button
        android:id="@+id/database_crud"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database_crud"/>
    <Button
        android:id="@+id/content_resolver_phone"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_resolver_phone"/>
    <Button
        android:id="@+id/multi_window"
        android:onClick="click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="分屏模式的生命周期"/>
</LinearLayout>
