<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DatabaseActivity">

    <Button
        android:id="@+id/create_database"
        android:onClick="databaseDown"
        android:text="@string/create_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_add"
        android:orientation="horizontal"
        android:layout_below="@id/create_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/book_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="name"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/book_author"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="author"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/book_pages"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="pages"
            android:inputType="number"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/book_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="price"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/database_add"
        android:layout_below="@id/ll_add"
        android:onClick="databaseDown"
        android:text="@string/database_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_below="@id/database_add"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/need_update_price_book_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/need_update_price_book_name"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/new_book_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="new BookPrice"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/database_update"
        android:layout_below="@id/ll_update"
        android:onClick="databaseDown"
        android:text="@string/database_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/need_to_delete_book_where_pages_is_not_requirements"
        android:layout_below="@id/database_update"
        android:hint="@string/need_to_delete_book_where_pages_is_not_requirements"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/database_delete"
        android:layout_below="@id/need_to_delete_book_where_pages_is_not_requirements"
        android:onClick="databaseDown"
        android:text="@string/database_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/database_delete_all"
        android:layout_below="@id/database_delete"
        android:onClick="databaseDown"
        android:text="@string/database_delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/database_query"
        android:layout_below="@+id/database_delete_all"
        android:onClick="databaseDown"
        android:text="@string/database_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/transaction_replace"
        android:layout_below="@id/database_query"
        android:text="@string/transaction_replace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/database_data"
        android:scrollbars="vertical"
        android:textSize="18sp"
        android:textColor="@android:color/holo_purple"
        android:layout_below="@id/transaction_replace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>