<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll"
    android:orientation="vertical"
    tools:context="activity.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_components"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="down"
                android:text="四大组件"
                />
            <Button
                android:id="@+id/basicView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="down"
                android:text="基本控件"/>
            <Button
                android:id="@+id/features_bt"
                android:onClick="down"
                android:text="@string/features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/java_bt"
                android:onClick="down"
                android:text="@string/java"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/manager"
                android:onClick="down"
                android:text="管理者"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/simulated_event"
                android:onClick="down"
                android:text="模拟事件"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/test"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="20sp"
                android:scrollbars="vertical"
                android:text="@string/test"/>

        </LinearLayout>


</LinearLayout>